src/main.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

@font-face {
    font-family: 'WorkSans';
    src: url('./assets/fonts/WorkSans-VariableFont_wght.ttf') format('truetype');
}

:root {
    /* FONTS */
    --primary-fonts: 'WorkSans', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;

    /* COLORS */
    --White: hsl(0, 0%, 100%);
    --Light-pink: hsl(275, 100%, 97%);
    --Grayish-purple: hsl(292, 16%, 49%);
    --Dark-purple: hsl(292, 42%, 14%);
    --bright-purple: hsl(281, 83%, 54%);
}

html {
    font-size: 62.5%;
}

body {
    min-height: 100vh;
    width: 100%;
    font: normal 1.6rem var(--primary-fonts);
    background-color: var(--Light-pink);

    display: grid;
    grid-template-rows: 1fr 50px;
    justify-items: center;
    align-items: center;
}

.bg-img {
    position: absolute;
    top: 0;
    left: 0;
    z-index: -999999;
    width: 100%;
    height: 320px;
    background: url(./assets/images/background-pattern-desktop.svg) no-repeat center center / cover;
}

/* FAQ Component Styles */
.FAQ-container {
    width: 800px;
    padding: 45px;
    border-radius: 30px;
    background-color: var(--White);
}

.FAQ-container>div~div {
    margin-top: 50px;
}

.FAQ-container .header {
    font-size: 2.5rem;
    display: flex;
    gap: 25px;
    margin-bottom: 50px;
}

.question button.accordion {
    position: relative;
    width: 100%;
    border: none;
    text-align: left;
    font: 600 2rem var(--primary-fonts);
    background-color: transparent;
    color: var(--Dark-purple);
}

.question button.accordion::after {
    content: "+";
    position: absolute;
    right: 0px;
    top: -5px;
    font: 400 2.5rem var(--primary-fonts);
    vertical-align: 10px;
    color: var(--White);
    display: inline-block;
    text-align: center;
    width: 30px;
    height: 30px;
    border-radius: 15px;
    background-color: var(--bright-purple);
}

.question button.accordion.active::after {
    content: "-";
    background-color: var(--Dark-purple);
}

.question button.accordion:hover {
    color: var(--bright-purple);
}

.question .panel {
    max-height: 0;
    overflow: hidden;
    padding: 15px 0 0 0;
    transition: ease-in-out .3s;
    font-size: 1.7rem;
    color: var(--Grayish-purple);
}
/* * * * * * */

.attribution {
    font-size: 11px;
    text-align: center;
}

.attribution a {
    color: hsl(228, 45%, 44%);
}

